--- a/_posts/2018-05-10-开篇博客记.md
+++ b/_posts/2018-05-10-开篇博客记.md
@@ -9,13 +9,13 @@ tags:
   - life
 ---
 # 介绍
- 我叫stonecastle, 目前是一个小小的security engineer. 做一些和cryptography 相关的工作，大多数时候都是在杂乱的工作中度过。 一直想开一个blog记录这些闲散杂碎的东西，无赖我是个重度拖延症患者，现在终于集中精力搭建了一个这样的东西。需要感谢[BY](http://qiubaiying.top/)提供了这样一个blog 模板，让我们可以直接借鉴。thanks again. Markdown 还在熟悉中，以前比较讨厌的是总是调不出自己想要的排版效果，但是现在学会放弃一些不实用的东西，只要看官们能看够get到topic的内容即可(this is also my goal)
+ 我叫stonecastle, 目前是一个小小的security engineer. 做一些和cryptography 相关的工作，大多数时候都是在杂乱的工作中度过。 一直想开一个blog记录这些闲散杂碎的东西，无奈我是个重度拖延症患者，现在终于集中精力搭建了一个这样的东西。需要感谢[BY](http://qiubaiying.top/)提供了这样一个blog 模板，让我们可以直接借鉴。thanks again. Markdown 还在熟悉中，以前比较讨厌的是总是调不出自己想要的排版效果，但是现在学会放弃一些不实用的东西，只要看官们能看够get到topic的内容即可(this is also my goal)
 
 # 工作
- 我的工作是一个非常混乱/繁杂的工作；大部分时间都是在和密码学/信息安全打交道， side-channel analysis 是我目前主要的工作之一; 也会在后续的blog中讲到一些商用side-channel analysis 的内容(probably). 业余时间做一些web 开发/mobile app 的开发，所以总的来说C/ASM, javascript & Python 我会常用到的语言(看起来跨度有些大;--是的，我也时常会需要不断切换)
+ 我的工作是一个非常混乱/繁杂的工作；大部分时间都是在和密码学/信息安全打交道， side-channel analysis 是我目前主要的工作之一; 也会在后续的blog中讲到一些商用side-channel analysis 的内容(probably). 业余时间做一些web 开发/mobile app 的开发，所以总的来说C,ASM,javascript & Python 我会常用到的语言(看起来跨度有些大;- 是的，我也时常会需要不断切换)
 
 # 生活
- 我和我的妻子还有孩子住在海边的一个小房子里，(不用怀疑，我是一个彻彻底底的中年人).
+ 我和我的妻子还有孩子住在海边的一个小房子里(不用怀疑，我是一个彻彻底底的中年人:)).
 
 # FINNAL
  Now, let's get start. Go my work and Go my life!
