--- a/_posts/2018-05-14-DES实现原理详解.md
+++ b/_posts/2018-05-14-DES实现原理详解.md
@@ -85,3 +85,9 @@ tags:
 
 # Summary
  本文讲述了DES/TDES的基本实现过程，但对于算法设计的原理并不十分了解，DES是一种典型的Festel cipher; 有关Festel cipher的知识在[在这里可以找到](https://en.wikipedia.org/wiki/Feistel_cipher). 可以看出，要实现DES算法的过程会涉及到许多查表/移位操作；但总的来说并不复杂.有兴趣的去实现一下吧. 本文对DES的描述参考了[FIPS 46-3的标准](https://csrc.nist.gov/csrc/media/publications/fips/46/3/archive/1999-10-25/documents/fips46-3.pdf).
+
+# Material
+ 本来打算做一个详细的过程，不过已经有人做了就不再重复造轮子.  
+ 1. 完整的DES加密过程举例(给出了置换/逆置换/SBOX等过程的中间输出) [这里](http://page.math.tu-berlin.de/~kant/teaching/hess/krypto-ws2006/des.htm)  
+ 2. 自己按照FIPS46-3做的一个代码实现，有兴趣的请参考 [github](https://github.com/haoranstone/cryto). 这个代码会不断更新，后续会在side-channel 分析中使用到这些代码  
+ 3. FIPS 46-3的标准 [这里](https://csrc.nist.gov/csrc/media/publications/fips/46/3/archive/1999-10-25/documents/fips46-3.pdf)
