--- a/_posts/2018-05-10-开篇博客记.md
+++ b/_posts/2018-05-10-开篇博客记.md
@@ -12,10 +12,17 @@ tags:
  我叫stonecastle, 目前是一个小小的security engineer. 做一些和cryptography 相关的工作，大多数时候都是在杂乱的工作中度过。 一直想开一个blog记录这些闲散杂碎的东西，无奈我是个重度拖延症患者，现在终于集中精力搭建了一个这样的东西。需要感谢[BY](http://qiubaiying.top/)提供了这样一个blog 模板，让我们可以直接借鉴。thanks again. Markdown 还在熟悉中，以前比较讨厌的是总是调不出自己想要的排版效果，但是现在学会放弃一些不实用的东西，只要看官们能看够get到topic的内容即可(this is also my goal)
 
 # 工作
- 我的工作是一个非常混乱/繁杂的工作；大部分时间都是在和密码学/信息安全打交道， side-channel analysis 是我目前主要的工作之一; 也会在后续的blog中讲到一些商用side-channel analysis 的内容(probably). 业余时间做一些web 开发/mobile app 的开发，所以总的来说C,ASM,javascript & Python 我会常用到的语言(看起来跨度有些大;- 是的，我也时常会需要不断切换)
+ 我的工作非常混乱/繁杂；大部分时间都是在和密码学/信息安全打交道， side-channel analysis 是我目前主要的工作之一; 也会在后续的blog中讲到一些商用side-channel analysis 的内容(possibly). 业余时间做一些web 开发/mobile app 的开发，所以总的来说C,ASM,javascript & Python 我会常用到的语言(看起来跨度有些大;- 是的，我也时常会需要不断切换)
 
 # 生活
  我和我的妻子还有孩子住在海边的一个小房子里(不用怀疑，我是一个彻彻底底的中年人:)).
 
 # FINNAL
  Now, let's get start. Go my work and Go my life!
+
+# Target
+ 这几天感觉2018年时间过得太快了，一转眼就快过去一半; 其实心中一直有很多的焦虑. 大多数来源这个浮躁的生活和繁杂的家庭生活. 慢慢的越来越懂得自己的习性了，我不得不说一个家庭的教育决定了孩子将来的性格和情商，更决定了他/她这一辈子所擅长的领域和行业. 在很多很多时候父母的举止在无形的影响孩子的性格和观念... 多说无益,言归正传. 希望在2018年把自己学到的知识比较系统的通过这个博客记录下来，害怕以后自己会觉得什么都没有收获到.
+### **密码学与侧信道的研究**
+  这几年围绕的主题都是密码学和侧信道分析，说起来是相当偏的一个行业和门类. 秉着沉下来慢慢领悟的原则，我想把对称密码和非对称密码里常见的算法原理及其实现大概的介绍出来，当然也会将代码写出来，因为我希望同时也把这些算法的侧信道分析过程讲一讲，对侧信道防御的改进密码算法也会做一些实现和研究.今年主要分析DES，AES，RSA及其变种/侧信道增强方案. 这其中会包括典型掩码算法，白盒密码等的一些基本分析. 而网络以及密码工程中常见的加密安全标准/算法/协议也会做一些介绍，这包括了: DUKPT, TLS. 希望着一些记录可以帮助我系统性的整理这几年学到/用到的知识
+### **IoT安全研究**
+  在这里的IoT研究指的是广义上的IoT Device. 近年来在工作中屡屡接触到; 但发现自己即便是经常用到的东西也会基础不牢固.借由博客的方式希望着重的讲一些较为基础的内容，这包括了编译与链接,反编译基础技术. 当然也会把实际经验里的一些内容记录下来，实际操作永远比书面了解来得深刻和扎实.
