--- a/_posts/2018-05-14-DES实现原理详解.md
+++ b/_posts/2018-05-14-DES实现原理详解.md
@@ -68,7 +68,7 @@ tags:
 # DES解密过程  
  DES的解密过程简单的来说是加密过程反向操作, 这个反向操作并不到SBox也是反向操作(4bit进6bit出) 因为SBox 是one-way 的转换(不可逆). 当收到一个密文$ciphertext$ (8bytes)时，解密操作步骤如下  
  1. ciphertext 分为 $L_{16}R_{16}$两半部分
- 2. 进入$IP$ 逆置换
+ 2. 进入$IP$ 置换
  3. 十六轮操作，**Note:解密操作的第一轮子密钥是加密操作的第十六子密钥，第二轮是加密的第15轮，如此类推，全部反转**
  4. 第十六轮输出反转$L_{16}R_{16}$->$R_{16}L_{16}$
  5. 经过$IP^{-1}$ 逆置换
@@ -91,3 +91,6 @@ tags:
  1. 完整的DES加密过程举例(给出了置换/逆置换/SBOX等过程的中间输出) [这里](http://page.math.tu-berlin.de/~kant/teaching/hess/krypto-ws2006/des.htm)  
  2. 自己按照FIPS46-3做的一个代码实现，有兴趣的请参考 [github](https://github.com/haoranstone/cryto). 这个代码会不断更新，后续会在side-channel 分析中使用到这些代码  
  3. FIPS 46-3的标准 [这里](https://csrc.nist.gov/csrc/media/publications/fips/46/3/archive/1999-10-25/documents/fips46-3.pdf)
+
+# Update History
+  * 2018-05-19 修改了解密部分"IP逆置换"的错误表述,添加正确的链接. 添加了source code link. 
